working, hideous styling

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -20,9 +20,8 @@
 
 
     <div id="main" class="container-fluid">
-
-      <div class="col-xs-2">
-        <side-bar></side-bar>
+      <div class="col-xs-4">
+        <cart></cart>
       </div>
 
       <div class="col-xs-8">
