--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -21,11 +21,11 @@
 
     <div id="main" class="container-fluid">
 
-      <div class="col-xs-2">
-        <side-bar></side-bar>
+      <div class="col-xs-12 col-sm-4">
+        <cart></cart>
       </div>
 
-      <div class="col-xs-8">
+      <div class="col-xs-12 col-sm-8">
         <ui-view></ui-view>
       </div>
 
