--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -37,6 +37,13 @@ navbar {
     }
   }
 
+  .search {
+    float: left;
+    margin-top: 12px;
+    font-size: 16px;
+    padding-left: 100px;
+  }
+
   .login-button {
     float: right;
     border: 1px solid black;
